--- a/index.html
+++ b/index.html
@@ -2,36 +2,60 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to My Website</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      color: #333;
-      text-align: center;
-      padding: 50px;
-    }
-    h1 {
-      color: #007acc;
-    }
-    a {
-      color: #007acc;
-      text-decoration: none;
-    }
-    footer {
-      margin-top: 40px;
-      font-size: 0.9em;
-      color: #777;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Legacy Palace Banquets</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hello, World! 🌍</h1>
-  <p>Welcome to my static website hosted on <strong>GitHub Pages</strong>.</p>
-  <p>Built with ❤️ by <em>Your Name</em>.</p>
+  <header>
+    <nav>
+      <div class="logo">Legacy Palace</div>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="hero">
+      <h1>Where Elegance Meets Celebration</h1>
+      <p>Plan your dream event at Legacy Palace Banquets</p>
+      <a href="#contact" class="cta-btn">Book Now</a>
+    </div>
+  </header>
+
+  <section id="about">
+    <h2>About Us</h2>
+    <p>Legacy Palace is a luxurious venue perfect for weddings, receptions, and special occasions. With elegant decor and personalized service, we turn your moments into memories.</p>
+  </section>
+
+  <section id="gallery">
+    <h2>Gallery</h2>
+    <div class="gallery">
+      <img src="images/gallery1.jpg" alt="Banquet Hall" />
+      <img src="images/gallery2.jpg" alt="Decoration" />
+      <img src="images/gallery3.jpg" alt="Event Setup" />
+    </div>
+  </section>
+
+  <section id="services">
+    <h2>Our Services</h2>
+    <ul>
+      <li>Wedding Ceremonies & Receptions</li>
+      <li>Corporate Events</li>
+      <li>Catering Services</li>
+      <li>Event Planning</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: info@legacypalace.in | Phone: +91-9876543210</p>
+    <p>Address: Legacy Palace, Frisco, TX (or update with actual location)</p>
+  </section>
+
   <footer>
-    <p>&copy; 2025 Your Name</p>
+    <p>&copy; 2025 Legacy Palace. All rights reserved.</p>
   </footer>
 </body>
 </html>
