--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       <div class="logo">Legacy Palace</div>
       <ul>
         <li><a href="#about">About</a></li>
+		<li><a href="#legacy">Legacy</a></li>
+        <li><a href="#features">Features</a></li>
         <li><a href="#gallery">Gallery</a></li>
-        <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -28,24 +29,77 @@
     <h2>About Us</h2>
     <p>Legacy Palace is a luxurious venue perfect for weddings, receptions, and special occasions. With elegant decor and personalized service, we turn your moments into memories.</p>
   </section>
-
-  <section id="gallery">
-    <h2>Gallery</h2>
-    <div class="gallery">
-      <img src="images/gallery1.jpg" alt="Banquet Hall" />
-      <img src="images/gallery2.jpg" alt="Decoration" />
-      <img src="images/gallery3.jpg" alt="Event Setup" />
-    </div>
+  
+  <section id="legacy">
+    <h2>Legacy Palace</h2>
+    <p>Welcome to Legacy Palace – the crown jewel of event experiences. Legacy Palace is where timeless elegance meets modern sophistication. We are committed to curating exceptional moments by combining grandeur, refinement, and heartfelt hospitality. Our devoted team is passionate about making your celebration our top priority — turning your vision into unforgettable reality.</p>
+    <p>At Legacy Palace, every event is treated as a masterpiece in the making. From your first visit to your final farewell, it is our honor to host you — and we look forward to welcoming you again and again.</p>
   </section>
 
-  <section id="services">
-    <h2>Our Services</h2>
+  <section id="grand-ballroom">
+    <h2>The Grand Ballroom</h2>
+    <h3>Discover Regal Elegance</h3>
+    <p>Legacy Palace redefines celebrations with our luxurious Grand Ballroom — a pillar-free, architecturally stunning space designed to host your life’s most cherished occasions. From enchanting weddings to elevated corporate events, every experience is tailored to your unique vision.</p>
+
+    <h3>Experience Classic Beauty</h3>
+    <p>Step into a setting of ornate staircases, elegant chandeliers, and majestic mirrors — a harmonious blend of gothic artistry and contemporary flair, evoking the feeling of a true fairytale.</p>
+
+    <h3>Celebrate with Magnificence</h3>
+    <p>Host your events in a space where refined décor, brilliant lighting, and intricate detailing come together to elevate every moment. The Grand Ballroom can be seamlessly customized to suit your needs, featuring state-of-the-art partition walls that maintain both beauty and functionality.</p>
+ 
+    <h3>Why Choose Legacy Palace?</h3>
+    <p>By choosing Legacy Palace, you're choosing:</p>
+    <ul>
+      <li>A state-of-the-art venue that balances tradition with innovation</li>
+      <li>A devoted team that treats your event as their own</li>
+      <li>A reputation built on trust, quality, and unforgettable experiences</li>
+    </ul>
+    <p>Let Legacy Palace be the backdrop to your most cherished memories.</p>
+ </section>
+  
+    <section id="features">
+    <h2>Features</h2>
+	<h2>Banquet Halls</h2>
     <ul>
       <li>Wedding Ceremonies & Receptions</li>
       <li>Corporate Events</li>
       <li>Catering Services</li>
       <li>Event Planning</li>
+	  <li>The largest functional hall in the heart of City</li>
+	  <li>Purpose built sound-proof partitions</li>
+	  <li>Centrally controlled lightening system suitable for all types of events</li>
+	  <li>High-speed and uninterrupted Wi-Fi</li>
+	  <li>State of the art audio-visual system</li>
+	  <li>Availability of various sitting arrangements:</li>
+	  <li>Theatrical style arrangement for 2500 guests</li>
+	  <li>Sit down formal dinner setup for 2500 guests</li>
+	  <li>L-shape/block table setup capacity of 200 guests</li>
+	  <li>The only Banquet facility having its own concourse of 1124 sq. meters</li>
+	  <li>Basements of parking with capacity of 100 cars</li> 
+	  <li>Primary hall can be divided into 2 halls, Gents and Ladies</li>
+	  <li>Video conference sharing between conference rooms</li>
     </ul>
+  </section>
+
+  <section id="gallery">
+    <h2>Gallery</h2>
+    <div class="gallery">
+      <img src="images/gallery1.jpg" alt="Gallery Image 1" />
+      <img src="images/gallery2.jpg" alt="Gallery Image 2" />
+      <img src="images/gallery3.jpg" alt="Gallery Image 3" />
+      <img src="images/gallery4.jpg" alt="Gallery Image 4" />
+      <img src="images/gallery5.jpg" alt="Gallery Image 5" />
+      <img src="images/gallery6.jpg" alt="Gallery Image 6" />
+      <img src="images/gallery7.jpg" alt="Gallery Image 7" />
+      <img src="images/gallery8.jpg" alt="Gallery Image 8" />
+      <img src="images/gallery9.jpg" alt="Gallery Image 9" />
+      <img src="images/gallery10.jpg" alt="Gallery Image 10" />
+      <img src="images/gallery11.jpg" alt="Gallery Image 11" />
+      <img src="images/gallery12.jpg" alt="Gallery Image 12" />
+      <img src="images/gallery13.jpg" alt="Gallery Image 13" />
+      <img src="images/gallery14.jpg" alt="Gallery Image 14" />
+      <img src="images/gallery15.jpg" alt="Gallery Image 15" />
+    </div>
   </section>
 
   <section id="contact">
