--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
     <div class="hero">
       <h1>Where Elegance Meets Celebration</h1>
       <p>Plan your dream event at Legacy Palace Banquets</p>
-      <a href="#contact" class="cta-btn">Book Now</a>
+      <img src="images/elevation1.jpeg" alt="Elevation" />
     </div>
   </header>
+  
+  
+  
+  
+  
 
   <section id="about">
     <h2>About Us</h2>
@@ -48,36 +53,30 @@
     <p>Host your events in a space where refined décor, brilliant lighting, and intricate detailing come together to elevate every moment. The Grand Ballroom can be seamlessly customized to suit your needs, featuring state-of-the-art partition walls that maintain both beauty and functionality.</p>
  
     <h3>Why Choose Legacy Palace?</h3>
-    <p>By choosing Legacy Palace, you're choosing:</p>
-    <ul>
-      <li>A state-of-the-art venue that balances tradition with innovation</li>
-      <li>A devoted team that treats your event as their own</li>
-      <li>A reputation built on trust, quality, and unforgettable experiences</li>
-    </ul>
-    <p>Let Legacy Palace be the backdrop to your most cherished memories.</p>
+    <p>By choosing Legacy Palace, you're choosing: A state-of-the-art venue that balances tradition with innovation. A devoted team that treats your event as their own. A reputation built on trust, quality, and unforgettable experiences. Let Legacy Palace be the backdrop to your most cherished memories.</p>
  </section>
   
     <section id="features">
     <h2>Features</h2>
 	<h2>Banquet Halls</h2>
     <ul>
-      <li>Wedding Ceremonies & Receptions</li>
-      <li>Corporate Events</li>
-      <li>Catering Services</li>
-      <li>Event Planning</li>
-	  <li>The largest functional hall in the heart of City</li>
-	  <li>Purpose built sound-proof partitions</li>
-	  <li>Centrally controlled lightening system suitable for all types of events</li>
-	  <li>High-speed and uninterrupted Wi-Fi</li>
-	  <li>State of the art audio-visual system</li>
-	  <li>Availability of various sitting arrangements:</li>
-	  <li>Theatrical style arrangement for 2500 guests</li>
-	  <li>Sit down formal dinner setup for 2500 guests</li>
-	  <li>L-shape/block table setup capacity of 200 guests</li>
-	  <li>The only Banquet facility having its own concourse of 1124 sq. meters</li>
-	  <li>Basements of parking with capacity of 100 cars</li> 
-	  <li>Primary hall can be divided into 2 halls, Gents and Ladies</li>
-	  <li>Video conference sharing between conference rooms</li>
+	  <p>Wedding Ceremonies & Receptions</p>
+	  <p>Corporate Events</p>
+	  <p>Catering Services</p>
+	  <p>Event Planning</p>
+	  <p>The largest functional hall in the heart of City</p>
+	  <p>Purpose built sound-proof partitions</p>
+	  <p>Centrally controlled pghtening system suitable for all types of events</p>
+	  <p>High-speed and uninterrupted Wi-Fi</p>
+	  <p>State of the art audio-visual system</p>
+	  <p>Availabipty of various sitting arrangements:</p>
+	  <p>Theatrical style arrangement for 2500 guests</p>
+	  <p>Sit down formal dinner setup for 2500 guests</p>
+	  <p>L-shape/block table setup capacity of 200 guests</p>
+	  <p>The only Banquet facipty having its own concourse of 1124 sq. meters</p>
+	  <p>Basements of parking with capacity of 100 cars</p> 
+	  <p>Primary hall can be divided into 2 halls, Gents and Ladies</p>
+	  <p>Video conference sharing between conference rooms</p>
     </ul>
   </section>
 
@@ -104,8 +103,20 @@
 
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>Email: info@legacypalace.in | Phone: +91-9876543210</p>
-    <p>Address: Legacy Palace, Frisco, TX (or update with actual location)</p>
+    <p>Email: replylegacypalace@gmail.com | Phone: +91-9014921881</p>
+    <p>Address: 19-4-430/6/A/B, Nehru Zoological Park Road, Tadban Circle, Hyderabad T.S.</p>
+  </section>
+  
+  <section id="social">
+    <h2>Connect With Us</h2>
+    <div class="social-icons">
+      <a href="https://www.facebook.com/legacypalacehyd" target="_blank" aria-label="Facebook">
+        <img src="images/faceback1.jpg" alt="Facebook" width="40" />
+      </a>
+      <a href="https://www.instagram.com/legacypalace" target="_blank" aria-label="Instagram">
+        <img src="images/instagram1.jpg" alt="Instagram" width="40" />
+      </a>
+    </div>
   </section>
 
   <footer>
