--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
       <img src="images/gallery13.jpg" alt="Gallery Image 13" />
       <img src="images/gallery14.jpg" alt="Gallery Image 14" />
       <img src="images/gallery15.jpg" alt="Gallery Image 15" />
-    </div>
+	  <img src="images/E1.jpg" alt="Gallery Image 11" />
+      <img src="images/E2.jpg" alt="Gallery Image 12" />
+      <img src="images/E3.jpg" alt="Gallery Image 13" />
+      <img src="images/E4.jpg" alt="Gallery Image 14" />
+      <img src="images/E22.jpg" alt="Gallery Image 15" />   </div>
   </section>
 
   <section id="contact">
