--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
   <section id="gallery">
     <h2>Gallery</h2>
     <div class="gallery">
+	  <img src="images/E1.jpg" alt="Gallery Image 11" />
+      <img src="images/E2.jpg" alt="Gallery Image 12" />
+      <img src="images/E3.jpg" alt="Gallery Image 13" />
+      <img src="images/E4.jpg" alt="Gallery Image 14" />
+      <img src="images/E22.jpg" alt="Gallery Image 15" />  
       <img src="images/gallery1.jpg" alt="Gallery Image 1" />
       <img src="images/gallery2.jpg" alt="Gallery Image 2" />
       <img src="images/gallery3.jpg" alt="Gallery Image 3" />
@@ -102,7 +107,8 @@
       <img src="images/E2.jpg" alt="Gallery Image 12" />
       <img src="images/E3.jpg" alt="Gallery Image 13" />
       <img src="images/E4.jpg" alt="Gallery Image 14" />
-      <img src="images/E22.jpg" alt="Gallery Image 15" />   </div>
+      <img src="images/E22.jpg" alt="Gallery Image 15" />   
+	</div>
   </section>
 
   <section id="contact">
