--- a/index.html
+++ b/index.html
@@ -83,31 +83,21 @@
   <section id="gallery">
     <h2>Gallery</h2>
     <div class="gallery">
-	  <img src="images/E1.jpg" alt="Gallery Image 11" />
-      <img src="images/E2.jpg" alt="Gallery Image 12" />
-      <img src="images/E3.jpg" alt="Gallery Image 13" />
-      <img src="images/E4.jpg" alt="Gallery Image 14" />
-      <img src="images/E22.jpg" alt="Gallery Image 15" />  
-      <img src="images/gallery1.jpg" alt="Gallery Image 1" />
-      <img src="images/gallery2.jpg" alt="Gallery Image 2" />
-      <img src="images/gallery3.jpg" alt="Gallery Image 3" />
-      <img src="images/gallery4.jpg" alt="Gallery Image 4" />
-      <img src="images/gallery5.jpg" alt="Gallery Image 5" />
-      <img src="images/gallery6.jpg" alt="Gallery Image 6" />
-      <img src="images/gallery7.jpg" alt="Gallery Image 7" />
-      <img src="images/gallery8.jpg" alt="Gallery Image 8" />
-      <img src="images/gallery9.jpg" alt="Gallery Image 9" />
-      <img src="images/gallery10.jpg" alt="Gallery Image 10" />
-      <img src="images/gallery11.jpg" alt="Gallery Image 11" />
-      <img src="images/gallery12.jpg" alt="Gallery Image 12" />
-      <img src="images/gallery13.jpg" alt="Gallery Image 13" />
-      <img src="images/gallery14.jpg" alt="Gallery Image 14" />
-      <img src="images/gallery15.jpg" alt="Gallery Image 15" />
-	  <img src="images/E1.jpg" alt="Gallery Image 11" />
-      <img src="images/E2.jpg" alt="Gallery Image 12" />
-      <img src="images/E3.jpg" alt="Gallery Image 13" />
-      <img src="images/E4.jpg" alt="Gallery Image 14" />
-      <img src="images/E22.jpg" alt="Gallery Image 15" />   
+	  <img src="images/L1.jpg" alt="Gallery Image 1" />
+	  <img src="images/E1.jpg" alt="Gallery Image 2" />
+      <img src="images/E2.jpg" alt="Gallery Image 3" />
+      <img src="images/In1.jpg" alt="Gallery Image 4" />
+      <img src="images/In2.jpg" alt="Gallery Image 5" />
+      <img src="images/In3.jpg" alt="Gallery Image 6" />
+      <img src="images/In4.jpg" alt="Gallery Image 7" />
+      <img src="images/S1.jpg" alt="Gallery Image 9" />
+      <img src="images/S2.jpg" alt="Gallery Image 10" />
+      <img src="images/S3.jpg" alt="Gallery Image 11" />
+      <img src="images/S4.jpg" alt="Gallery Image 12" />
+      <img src="images/S5.jpg" alt="Gallery Image 13" />
+      <img src="images/Out1.jpg" alt="Gallery Image 14" />
+      <img src="images/Out2.jpg" alt="Gallery Image 15" />
+      <img src="images/Out3.jpg" alt="Gallery Image 16" />
 	</div>
   </section>
 
@@ -121,7 +111,7 @@
     <h2>Connect With Us</h2>
     <div class="social-icons">
       <a href="https://www.facebook.com/legacypalacehyd" target="_blank" aria-label="Facebook">
-        <img src="images/faceback1.jpg" alt="Facebook" width="40" />
+        <img src="images/facebook1.jpg" alt="Facebook" width="40" />
       </a>
       <a href="https://www.instagram.com/legacypalace" target="_blank" aria-label="Instagram">
         <img src="images/instagram1.jpg" alt="Instagram" width="40" />
@@ -132,5 +122,4 @@
   <footer>
     <p>&copy; 2025 Legacy Palace. All rights reserved.</p>
   </footer>
-</body>
-</html>
+</body></html>
