--- a/index.html
+++ b/index.html
@@ -2,124 +2,103 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Legacy Palace Banquets</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Legacy Palace</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body { font-family: 'Segoe UI', sans-serif; }
+    .hero {
+      background: url('images/E2.jpg') center/cover no-repeat;
+      height: 90vh;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      flex-direction: column;
+    }
+    .hero h1 { font-size: 3rem; }
+    .section-padding { padding: 60px 0; }
+    .gallery img { width: 100%; height: auto; }
+    footer { background: #333; color: white; padding: 20px 0; text-align: center; }
+  </style>
 </head>
 <body>
-  <header>
-    <nav>
-      <div class="logo">Legacy Palace</div>
-      <ul>
-        <li><a href="#about">About</a></li>
-		<li><a href="#legacy">Legacy</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#gallery">Gallery</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-    <div class="hero">
-      <h1>Where Elegance Meets Celebration</h1>
-      <p>Plan your dream event at Legacy Palace Banquets</p>
-      <img src="images/elevation1.jpeg" alt="Elevation" />
-    </div>
+  <!-- Hero Section -->
+  <header class="hero text-white">
+    <h1>Welcome to Legacy Palace</h1>
+    <p>Where Elegance Meets Celebration</p>
   </header>
-  
-  
-  
-  
-  
 
-  <section id="about">
-    <h2>About Us</h2>
-    <p>Legacy Palace is a luxurious venue perfect for weddings, receptions, and special occasions. With elegant decor and personalized service, we turn your moments into memories.</p>
-  </section>
-  
-  <section id="legacy">
-    <h2>Legacy Palace</h2>
-    <p>Welcome to Legacy Palace – the crown jewel of event experiences. Legacy Palace is where timeless elegance meets modern sophistication. We are committed to curating exceptional moments by combining grandeur, refinement, and heartfelt hospitality. Our devoted team is passionate about making your celebration our top priority — turning your vision into unforgettable reality.</p>
-    <p>At Legacy Palace, every event is treated as a masterpiece in the making. From your first visit to your final farewell, it is our honor to host you — and we look forward to welcoming you again and again.</p>
+  <!-- About Section -->
+  <section class="section-padding text-center">
+    <div class="container">
+      <h2>About Legacy Palace</h2>
+      <p>Legacy Palace is your destination for unforgettable events. A venue that balances tradition with elegance and offers modern features for weddings, receptions, and corporate occasions.</p>
+    </div>
   </section>
 
-  <section id="grand-ballroom">
-    <h2>The Grand Ballroom</h2>
-    <h3>Discover Regal Elegance</h3>
-    <p>Legacy Palace redefines celebrations with our luxurious Grand Ballroom — a pillar-free, architecturally stunning space designed to host your life’s most cherished occasions. From enchanting weddings to elevated corporate events, every experience is tailored to your unique vision.</p>
+  <!-- Grand Ballroom Section -->
+  <section class="section-padding bg-light">
+    <div class="container">
+      <h2 class="text-center">The Grand Ballroom</h2>
+      <p class="text-center">A pillar-less, luxurious space for your most memorable occasions, complete with Victorian elegance and gothic flair.</p>
 
-    <h3>Experience Classic Beauty</h3>
-    <p>Step into a setting of ornate staircases, elegant chandeliers, and majestic mirrors — a harmonious blend of gothic artistry and contemporary flair, evoking the feeling of a true fairytale.</p>
-
-    <h3>Celebrate with Magnificence</h3>
-    <p>Host your events in a space where refined décor, brilliant lighting, and intricate detailing come together to elevate every moment. The Grand Ballroom can be seamlessly customized to suit your needs, featuring state-of-the-art partition walls that maintain both beauty and functionality.</p>
- 
-    <h3>Why Choose Legacy Palace?</h3>
-    <p>By choosing Legacy Palace, you're choosing: A state-of-the-art venue that balances tradition with innovation. A devoted team that treats your event as their own. A reputation built on trust, quality, and unforgettable experiences. Let Legacy Palace be the backdrop to your most cherished memories.</p>
- </section>
-  
-    <section id="features">
-    <h2>Features</h2>
-	<h2>Banquet Halls</h2>
-    <ul>
-	  <p>Wedding Ceremonies & Receptions</p>
-	  <p>Corporate Events</p>
-	  <p>Catering Services</p>
-	  <p>Event Planning</p>
-	  <p>The largest functional hall in the heart of City</p>
-	  <p>Purpose built sound-proof partitions</p>
-	  <p>Centrally controlled pghtening system suitable for all types of events</p>
-	  <p>High-speed and uninterrupted Wi-Fi</p>
-	  <p>State of the art audio-visual system</p>
-	  <p>Availabipty of various sitting arrangements:</p>
-	  <p>Theatrical style arrangement for 2500 guests</p>
-	  <p>Sit down formal dinner setup for 2500 guests</p>
-	  <p>L-shape/block table setup capacity of 200 guests</p>
-	  <p>The only Banquet facipty having its own concourse of 1124 sq. meters</p>
-	  <p>Basements of parking with capacity of 100 cars</p> 
-	  <p>Primary hall can be divided into 2 halls, Gents and Ladies</p>
-	  <p>Video conference sharing between conference rooms</p>
-    </ul>
+      <!-- Gallery Carousel -->
+      <div id="galleryCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/E1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/E2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/E3.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#galleryCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#galleryCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
   </section>
 
-  <section id="gallery">
-    <h2>Gallery</h2>
-    <div class="gallery">
-	  <img src="images/L1.jpg" alt="Gallery Image 1" />
-	  <img src="images/E1.jpg" alt="Gallery Image 2" />
-      <img src="images/E2.jpg" alt="Gallery Image 3" />
-      <img src="images/In1.jpg" alt="Gallery Image 4" />
-      <img src="images/In2.jpg" alt="Gallery Image 5" />
-      <img src="images/In3.jpg" alt="Gallery Image 6" />
-      <img src="images/In4.jpg" alt="Gallery Image 7" />
-      <img src="images/S1.jpg" alt="Gallery Image 9" />
-      <img src="images/S2.jpg" alt="Gallery Image 10" />
-      <img src="images/S3.jpg" alt="Gallery Image 11" />
-      <img src="images/S4.jpg" alt="Gallery Image 12" />
-      <img src="images/S5.jpg" alt="Gallery Image 13" />
-      <img src="images/Out1.jpg" alt="Gallery Image 14" />
-      <img src="images/Out2.jpg" alt="Gallery Image 15" />
-      <img src="images/Out3.jpg" alt="Gallery Image 16" />
-	</div>
+  <!-- Why Choose Section -->
+  <section class="section-padding text-center">
+    <div class="container">
+      <h2>Why Choose Legacy Palace?</h2>
+      <ul class="list-unstyled">
+        <li>A state-of-the-art venue that balances tradition with innovation</li>
+        <li>A devoted team that treats your event as their own</li>
+        <li>A reputation built on trust, quality, and unforgettable experiences</li>
+      </ul>
+      <p>Let Legacy Palace be the backdrop to your most cherished memories.</p>
+    </div>
   </section>
 
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: replylegacypalace@gmail.com | Phone: +91-9014921881</p>
-    <p>Address: 19-4-430/6/A/B, Nehru Zoological Park Road, Tadban Circle, Hyderabad T.S.</p>
-  </section>
-  
-  <section id="social">
-    <h2>Connect With Us</h2>
-    <div class="social-icons">
-      <a href="https://www.facebook.com/legacypalacehyd" target="_blank" aria-label="Facebook">
-        <img src="images/facebook1.jpg" alt="Facebook" width="40" />
-      </a>
-      <a href="https://www.instagram.com/legacypalace" target="_blank" aria-label="Instagram">
-        <img src="images/instagram1.jpg" alt="Instagram" width="40" />
-      </a>
+  <!-- Contact Section -->
+  <section class="section-padding bg-light text-center">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <p>Email: info@legacypalace.in | Phone: +91-9876543210</p>
+      <p>Address: Legacy Palace, Frisco, TX</p>
+      <div class="d-flex justify-content-center gap-4">
+        <a href="https://facebook.com/legacypalace" target="_blank"><img src="images/facebook1.jpg" width="32" alt="Facebook" /></a>
+        <a href="https://instagram.com/legacypalace" target="_blank"><img src="images/instagram1.jpg" width="32" alt="Instagram" /></a>
+      </div>
     </div>
   </section>
 
   <footer>
     <p>&copy; 2025 Legacy Palace. All rights reserved.</p>
   </footer>
-</body></html>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
