--- a/index.html
+++ b/index.html
@@ -5,57 +5,102 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Legacy Palace</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body { font-family: 'Segoe UI', sans-serif; }
-    .hero {
-      background: url('images/E2.jpg') center/cover no-repeat;
-      height: 90vh;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      flex-direction: column;
-    }
-    .hero h1 { font-size: 3rem; }
-    .section-padding { padding: 60px 0; }
-    .gallery img { width: 100%; height: auto; }
-    footer { background: #333; color: white; padding: 20px 0; text-align: center; }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Hero Section -->
-  <header class="hero text-white">
-    <h1>Welcome to Legacy Palace</h1>
-    <p>Where Elegance Meets Celebration</p>
-  </header>
-
-  <!-- About Section -->
-  <section class="section-padding text-center">
-    <div class="container">
-      <h2>About Legacy Palace</h2>
-      <p>Legacy Palace is your destination for unforgettable events. A venue that balances tradition with elegance and offers modern features for weddings, receptions, and corporate occasions.</p>
+  <div class="lplogo">
+    <div class="lplogo-content">
+      <h1>Legacy Palace</h1>
+      <p>- Legacy Palace the crown jewel of event experiences where Elegance Meets Celebration -</p>
+      <nav>
+        <ul>
+          <li><a href="#intro">Intro</a></li>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#gallery">Gallery</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
     </div>
-  </section>
+  </div>
 
-  <!-- Grand Ballroom Section -->
-  <section class="section-padding bg-light">
-    <div class="container">
-      <h2 class="text-center">The Grand Ballroom</h2>
-      <p class="text-center">A pillar-less, luxurious space for your most memorable occasions, complete with Victorian elegance and gothic flair.</p>
+  <main>
+    <section id="intro" class="section-content">
+      <h2>About</h2>
+      <p>Legacy Palace is your destination for unforgettable events and where timeless elegance meets modern sophistication. A venue that balances tradition with elegance and offers modern features for weddings, receptions, and corporate occasions. We are committed to curating exceptional moments by combining grandeur, refinement, and heartfelt hospitality. Our devoted team is passionate about making your celebration our top priority — turning your vision into unforgettable reality. At Legacy Palace, every event is treated as a masterpiece in the making. From your first visit to your final farewell, it is our honor to host you — and we look forward to welcoming you again and again.</p>
+      <h3>The Grand Ballroom</h3>
+      <h3>Discover Regal Elegance</h3>
+	  <p>Legacy Palace redefines celebrations with our luxurious Grand Ballroom — a pillar-free, architecturally stunning space designed to host your life’s most cherished occasions, complete with Victorian elegance and gothic flair. From enchanting weddings to elevated corporate events, every experience is tailored to your unique vision.</p>
+      <h3>Experience Classic Beauty</h3>
+	  <p>Step into a setting of ornate staircases, elegant chandeliers, and majestic mirrors — a harmonious blend of gothic artistry and contemporary flair, evoking the feeling of a true fairytale.</p>
+      <h3>Celebrate with Magnificence</h3>
+	  <p>Host your events in a space where refined décor, brilliant lighting, and intricate detailing come together to elevate every moment. The Grand Ballroom can be seamlessly customized to suit your needs, featuring state-of-the-art partition walls that maintain both beauty and functionality.</p>
+      <h3>Why Choose Legacy Palace?</h3>
+	  <p>By choosing Legacy Palace, you're choosing: A state-of-the-art venue that balances tradition with innovation. A devoted team that treats your event as their own. A reputation built on trust, quality, and unforgettable experiences. Let Legacy Palace be the backdrop to your most cherished memories.</p>	  
+	</section>
 
-      <!-- Gallery Carousel -->
+    <section id="features" class="section-content">
+      <h2>Banquet Halls Features</h2>
+      <ul>
+        <li>Wedding Ceremonies & Receptions</li>
+        <li>Corporate Events</li>
+        <li>Catering Services</li>
+        <li>Event Planning</li>
+        <li>Theatrical style seating for 2500 guests</li>
+        <li>Formal dinner setup for 2500 guests</li>
+        <li>L-shape setup for 200 guests</li>
+        <li>Basement parking for 100 cars</li>
+      </ul>
+    </section>
+
+    <section id="gallery" class="section-content">
+      <h2 class="text-center">Gallery</h2>
       <div id="galleryCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/E1.jpg" class="d-block w-100" alt="...">
+            <img src="images/Elevation2.jpg" class="d-block w-100" alt="Hall 1">
           </div>
           <div class="carousel-item">
-            <img src="images/E2.jpg" class="d-block w-100" alt="...">
+            <img src="images/Elevation3.jpg" class="d-block w-100" alt="Hall 2">
           </div>
           <div class="carousel-item">
-            <img src="images/E3.jpg" class="d-block w-100" alt="...">
+            <img src="images/Hall1.jpg" class="d-block w-100" alt="Hall 3">
           </div>
+          <div class="carousel-item">
+            <img src="images/Hall2.jpg" class="d-block w-100" alt="Hall 4">
+          </div> 
+          <div class="carousel-item">
+            <img src="images/Stage1.jpg" class="d-block w-100" alt="Hall 5">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Stage2.jpg" class="d-block w-100" alt="Hall 6">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Stage3.jpg" class="d-block w-100" alt="Hall 7">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Stage4.jpg" class="d-block w-100" alt="Hall 8">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Stage5.jpg" class="d-block w-100" alt="Hall 9">
+          </div>	  
+          <div class="carousel-item">
+            <img src="images/Hall3.jpg" class="d-block w-100" alt="Hall 10">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Hall4.jpg" class="d-block w-100" alt="Hall 11">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Outside1.jpg" class="d-block w-100" alt="Hall 12">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Outside2.jpg" class="d-block w-100" alt="Hall 13">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Outside3.jpg" class="d-block w-100" alt="Hall 14">
+          </div>
+          <div class="carousel-item">
+            <img src="images/LP_Logo_3D.jpg" class="d-block w-100" alt="Hall 15">
+          </div> 
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#galleryCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -66,39 +111,33 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Why Choose Section -->
-  <section class="section-padding text-center">
-    <div class="container">
-      <h2>Why Choose Legacy Palace?</h2>
-      <ul class="list-unstyled">
-        <li>A state-of-the-art venue that balances tradition with innovation</li>
-        <li>A devoted team that treats your event as their own</li>
-        <li>A reputation built on trust, quality, and unforgettable experiences</li>
-      </ul>
-      <p>Let Legacy Palace be the backdrop to your most cherished memories.</p>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section class="section-padding bg-light text-center">
-    <div class="container">
+    <section id="contact" class="section-content">
       <h2>Contact Us</h2>
-      <p>Email: info@legacypalace.in | Phone: +91-9876543210</p>
-      <p>Address: Legacy Palace, Frisco, TX</p>
-      <div class="d-flex justify-content-center gap-4">
-        <a href="https://facebook.com/legacypalace" target="_blank"><img src="images/facebook1.jpg" width="32" alt="Facebook" /></a>
-        <a href="https://instagram.com/legacypalace" target="_blank"><img src="images/instagram1.jpg" width="32" alt="Instagram" /></a>
-      </div>
-    </div>
-  </section>
-
-  <footer>
+      <p>Phone: +91-9014921881 </p>
+      <p>Email: replylegacypalace@gmail.com</p>
+      <p>Address: 19-4-430/6/A/B, Nehru Zoological Park Road, Tadban Circle, Hyderabad T.S.</p>
+    </section>
+	
+	<section id="social" class="section-content">
+      <h2>Connect with Us</h2>
+		<div class="social-icons">
+			<a href="https://www.facebook.com/legacypalacehyd" target="_blank" aria-label="Facebook">
+			<img src="images/Facebook1.jpg" alt="Facebook" width="40" />
+			</a>
+			<a href="https://www.instagram.com/legacypalace" target="_blank" aria-label="Instagram">
+			<img src="images/Instagram1.jpg" alt="Instagram" width="40" />
+			</a>
+		</div>
+    </section>
+	
+  </main>
+  
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"> </script>
+    <footer>
     <p>&copy; 2025 Legacy Palace. All rights reserved.</p>
   </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
 </body>
 </html>
