--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="lplogo">
     <div class="lplogo-content">
       <h1>Legacy Palace</h1>
-      <p>- Legacy Palace the crown jewel of event experiences where Elegance Meets Celebration -</p>
+      <p>The crown jewel of event experiences where elegance meets celebration</p>
       <nav>
         <ul>
           <li><a href="#intro">Intro</a></li>
@@ -29,13 +29,13 @@
       <p>Legacy Palace is your destination for unforgettable events and where timeless elegance meets modern sophistication. A venue that balances tradition with elegance and offers modern features for weddings, receptions, and corporate occasions. We are committed to curating exceptional moments by combining grandeur, refinement, and heartfelt hospitality. Our devoted team is passionate about making your celebration our top priority — turning your vision into unforgettable reality. At Legacy Palace, every event is treated as a masterpiece in the making. From your first visit to your final farewell, it is our honor to host you — and we look forward to welcoming you again and again.</p>
       <h3>The Grand Ballroom</h3>
       <h3>Discover Regal Elegance</h3>
-	  <p>Legacy Palace redefines celebrations with our luxurious Grand Ballroom — a pillar-free, architecturally stunning space designed to host your life’s most cherished occasions, complete with Victorian elegance and gothic flair. From enchanting weddings to elevated corporate events, every experience is tailored to your unique vision.</p>
+	  <p>Legacy Palace redefines celebrations with our luxurious Grand Ballroom — a pillar-free, architecturally stunning space designed to host your life’s most cherished occasions, complete with Victorian elegance and flair. From enchanting weddings to elevated corporate events, every experience is tailored to your unique vision.</p>
       <h3>Experience Classic Beauty</h3>
-	  <p>Step into a setting of ornate staircases, elegant chandeliers, and majestic mirrors — a harmonious blend of gothic artistry and contemporary flair, evoking the feeling of a true fairytale.</p>
+	  <p>Step into a setting of ornate staircases, elegant chandeliers, and majestic mirrors — a harmonious blend of artistry and contemporary flair, evoking the feeling of a true fairytale.</p>
       <h3>Celebrate with Magnificence</h3>
 	  <p>Host your events in a space where refined décor, brilliant lighting, and intricate detailing come together to elevate every moment. The Grand Ballroom can be seamlessly customized to suit your needs, featuring state-of-the-art partition walls that maintain both beauty and functionality.</p>
       <h3>Why Choose Legacy Palace?</h3>
-	  <p>By choosing Legacy Palace, you're choosing: A state-of-the-art venue that balances tradition with innovation. A devoted team that treats your event as their own. A reputation built on trust, quality, and unforgettable experiences. Let Legacy Palace be the backdrop to your most cherished memories.</p>	  
+	  <p>By choosing Legacy Palace, you're choosing: a state-of-the-art venue that balances tradition with innovation. A devoted team that treats your event as their own. A reputation built on trust, quality, and unforgettable experiences. Let Legacy Palace be the backdrop to your most cherished memories.</p>	  
 	</section>
 
     <section id="features" class="section-content">
